--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Luminar Technolab</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -50,11 +50,17 @@
 
 <body>
   <div style="height: 40px; background-color: #5e068a;" class="w-100">
-    <div class="container pt-2">
-      <a style="text-decoration: none; color: white;" href="">Have any question? +91 8086 651 651</a><a
-        style="text-decoration: none; color: white; padding-left: 625px;" href=""><i
-          class="fa-sharp fa-solid fa-phone"></i>+91 8086 651 651 <i class="fa-solid fa-envelope"></i>
-        contact@luminartechnolab.com</a>
+    <div class="container pt-2 w-100">
+      <div class="row">
+        <div class="col-6">
+          <a style="text-decoration: none; color: white;" href="">Have any question? +91 8086 651 651</a>
+        </div>
+        <div class="col-6 " style="text-align: right;">
+          <a  style="text-decoration: none; color: white;" href=""><i
+            class="fa-sharp fa-solid fa-phone"></i>+91 8086 651 651 <i class="fa-solid fa-envelope"></i>
+          contact@luminartechnolab.com</a>
+        </div>
+      </div>
     </div>
 
   </div>
